feat(api): download saved application manifests
